--- a/Android PPT/Android code/1 Hello World/res/layout/content_main.xml
+++ b/Android PPT/Android code/1 Hello World/res/layout/content_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.gs_0851.helloworld.MainActivity"
+    tools:context="com.example.helloworld.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <TextView
