--- a/Android PPT/Android code/3 Event Handling 2/res/layout/activity_first_app.xml
+++ b/Android PPT/Android code/3 Event Handling 2/res/layout/activity_first_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="demo.mit.com.firstapplication.FirstApp">
+    tools:context="demo.com.firstapplication.FirstApp">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
