--- a/Android PPT/Android code/3 Event Handling 2/res/layout/content_first_app.xml
+++ b/Android PPT/Android code/3 Event Handling 2/res/layout/content_first_app.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="demo.mit.com.firstapplication.FirstApp"
+    tools:context="demo.com.firstapplication.FirstApp"
     tools:showIn="@layout/activity_first_app">
 
     <RelativeLayout
